[gd_scene load_steps=2 format=3 uid="uid://b5gr7s7cp02p2"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_hse5c"]

[node name="DetailCanvas" type="CanvasLayer"]
script = ExtResource("1_hse5c")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 251.0
offset_bottom = 201.0
color = Color(0.220737, 0.745868, 0.643782, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 14.0
offset_top = 18.0
offset_right = 231.0
offset_bottom = 183.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="DetailsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DetailsInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="EditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Edit"
